# storage/api-docs/api-docs.json
@@ -259,7 +259,7 @@
                 "description": "Get all books",
                 "operationId": "b6587e4a3cdaf1d4586a568fdab39676",
                 "responses": {
-                    "201": {
+                    "200": {
                         "description": "OK",
                         "content": {
                             "application/json": {
@@ -456,6 +456,185 @@
                     }
                 }
             }
+        },
+        "/api/v1/cabinet/": {
+            "post": {
+                "tags": [
+                    "Cabinet"
+                ],
+                "description": "Create a cabinet entry",
+                "operationId": "4b1a94dfbda834c5bf660c952b041126",
+                "parameters": [
+                    {
+                        "name": "user_id",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "name": "book_id",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "name": "user_role_id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "401": {
+                        "description": "Unauthorized."
+                    },
+                    "404": {
+                        "description": "Not found"
+                    }
+                }
+            }
+        },
+        "/api/v1/cabinet/getAllByUser": {
+            "get": {
+                "tags": [
+                    "Cabinet"
+                ],
+                "description": "Get all books by user",
+                "operationId": "0da190292306a9fd68f325a4058a3abf",
+                "parameters": [
+                    {
+                        "name": "user_id",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "name": "user_role_id",
+                        "in": "query",
+                        "required": false
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": true
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "OK"
+                                        },
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/components/schemas/Book"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized."
+                    },
+                    "404": {
+                        "description": "Not found"
+                    }
+                }
+            }
+        },
+        "/api/v1/cabinet/getCoworkersOfBook": {
+            "get": {
+                "tags": [
+                    "Cabinet"
+                ],
+                "description": "Get all coworkers of book",
+                "operationId": "d9f580afa9f1cb5aece4e984948fed5e",
+                "parameters": [
+                    {
+                        "name": "book_id",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "name": "user_role_id",
+                        "in": "query",
+                        "required": false
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": true
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "OK"
+                                        },
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "properties": {
+                                                    "user": {
+                                                        "$ref": "#/components/schemas/User"
+                                                    },
+                                                    "role": {
+                                                        "$ref": "#/components/schemas/UserRole"
+                                                    }
+                                                },
+                                                "type": "object"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized."
+                    },
+                    "404": {
+                        "description": "Not found"
+                    }
+                }
+            }
+        },
+        "/api/v1/userRoles/": {
+            "get": {
+                "tags": [
+                    "Roles"
+                ],
+                "description": "Get list or one role",
+                "operationId": "d93525d549880205bf2701f3f04f1690",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": false
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "401": {
+                        "description": "Unauthorized."
+                    }
+                }
+            }
         }
     },
     "components": {
@@ -505,6 +684,34 @@
                 },
                 "type": "object"
             },
+            "CabinetEntry": {
+                "properties": {
+                    "id": {
+                        "type": "integer"
+                    },
+                    "user_id": {
+                        "type": "integer",
+                        "example": 1
+                    },
+                    "book_id": {
+                        "type": "integer",
+                        "example": 1
+                    },
+                    "user_role_id": {
+                        "type": "integer",
+                        "example": 1
+                    },
+                    "created_at": {
+                        "type": "string",
+                        "format": "date"
+                    },
+                    "updated_at": {
+                        "type": "string",
+                        "format": "date"
+                    }
+                },
+                "type": "object"
+            },
             "User": {
                 "properties": {
                     "id": {
@@ -527,6 +734,25 @@
                     "updated_at": {
                         "type": "string",
                         "format": "date"
+                    }
+                },
+                "type": "object"
+            },
+            "UserRole": {
+                "properties": {
+                    "id": {
+                        "type": "integer"
+                    },
+                    "role": {
+                        "type": "string"
+                    },
+                    "created_at": {
+                        "type": "string",
+                        "format": "date-time"
+                    },
+                    "updated_at": {
+                        "type": "string",
+                        "format": "date-time"
                     }
                 },
                 "type": "object"
